--- a/app/views/pages/buscar.ejs
+++ b/app/views/pages/buscar.ejs
@@ -160,5 +160,11 @@
     <script src="/js/navegacao.js"></script>
     <script src="/js/busca-global.js"></script>
     <script src="/js/favoritos-global.js"></script>
+    <script>
+        function goBack() {
+            window.history.back();
+        }
+    </script>
+    <script src="/js/sacola-global.js"></script>
 </body>
 </html>
