--- a/app/views/pages/categorias.ejs
+++ b/app/views/pages/categorias.ejs
@@ -96,7 +96,7 @@
                     <p class="price">R$49,99</p>
                     <p class="Descrição">ou em 2x de R$25,00</p>
                     <button class="favorite" onclick="toggleFavorite(this, 1)"><img src="imagens/coraçao de fav2.png"></button>
-                    <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+                    <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
                 </article>
                 <article class="product-card">
                     <a href="/produto3"><img src="imagens/vestido roxo.png" alt="Vestido roxo"></a>
@@ -104,7 +104,7 @@
                     <p class="price">R$39,99</p>
                     <p class="Descrição">ou em 2x de R$20,00</p>
                     <button class="favorite" onclick="toggleFavorite(this, 2)"><img src="imagens/coraçao de fav2.png"></button>
-                    <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+                    <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
                 </article>
                 <article class="product-card">
                     <img src="imagens/vestido preto.png" alt="Vestido preto">
@@ -112,7 +112,7 @@
                     <p class="price">R$59,99</p>
                     <p class="Descrição">ou em 3x de R$20,00</p>
                     <button class="favorite" onclick="toggleFavorite(this, 11)"><img src="imagens/coraçao de fav2.png"></button>
-                    <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+                    <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
                 </article>
                 <article class="product-card">
                     <img src="imagens/vestido branco2.png" alt="Vestido branco 2">
@@ -120,7 +120,7 @@
                     <p class="price">R$45,99</p>
                     <p class="Descrição">ou em 2x de R$23,00</p>
                     <button class="favorite" onclick="toggleFavorite(this, 12)"><img src="imagens/coraçao de fav2.png"></button>
-                    <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+                    <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
                 </article>
                 <article class="product-card">
                     <img src="imagens/vestido roxo2.png" alt="Calça jeans">
@@ -128,7 +128,7 @@
                     <p class="price">R$75,99</p>
                     <p class="Descrição">ou em 3x de R$25,33</p>
                     <button class="favorite" onclick="toggleFavorite(this, 18)"><img src="imagens/coraçao de fav2.png"></button>
-                    <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+                    <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
                 </article>
             </section>
         </section>
@@ -146,7 +146,7 @@
                     <p class="price">R$19,99</p>
                     <p class="Descrição">ou em 2x de R$10,00</p>
                     <button class="favorite" onclick="toggleFavorite(this, 3)"><img src="imagens/coraçao de fav2.png"></button>
-                    <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+                    <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
                 </article>
                 <article class="product-card">
                     <img src="imagens/cropped flor.png" alt="Cropped floral">
@@ -154,7 +154,7 @@
                     <p class="price">R$49,99</p>
                     <p class="Descrição">ou em 2x de R$25,00</p>
                     <button class="favorite" onclick="toggleFavorite(this, 4)"><img src="imagens/coraçao de fav2.png"></button>
-                    <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+                    <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
                 </article>
                 <article class="product-card">
                     <img src="imagens/cropped rosa.png" alt="Cropped rosa">
@@ -162,7 +162,7 @@
                     <p class="price">R$35,99</p>
                     <p class="Descrição">ou em 2x de R$18,00</p>
                     <button class="favorite" onclick="toggleFavorite(this, 13)"><img src="imagens/coraçao de fav2.png"></button>
-                    <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+                    <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
                 </article>
                 <article class="product-card">
                     <img src="imagens/cropped cinza.png" alt="Cropped cinza">
@@ -170,7 +170,7 @@
                     <p class="price">R$29,99</p>
                     <p class="Descrição">ou em 2x de R$15,00</p>
                     <button class="favorite" onclick="toggleFavorite(this, 14)"><img src="imagens/coraçao de fav2.png"></button>
-                    <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+                    <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
                 </article>
                 <article class="product-card">
                     <img src="imagens/branca regata.png" alt="Blusa branca">
@@ -178,7 +178,7 @@
                     <p class="price">R$25,99</p>
                     <p class="Descrição">ou em 2x de R$13,00</p>
                     <button class="favorite" onclick="toggleFavorite(this, 5)"><img src="imagens/coraçao de fav2.png"></button>
-                    <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+                    <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
                 </article>
             </section>
         </section>
@@ -196,7 +196,7 @@
                     <p class="price">R$29,99</p>
                     <p class="Descrição">ou em 2x R$15,00</p>
                     <button class="favorite" onclick="toggleFavorite(this, 9)"><img src="imagens/coraçao de fav2.png"></button>
-                    <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+                    <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
                 </article>
                 <article class="product-card">
                     <img src="imagens/bolsa brilhante.png" alt="Bolsa Brilhante">
@@ -204,7 +204,7 @@
                     <p class="price">R$29,99</p>
                     <p class="Descrição">ou em 2x R$15,00</p>
                     <button class="favorite" onclick="toggleFavorite(this, 10)"><img src="imagens/coraçao de fav2.png"></button>
-                    <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+                    <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
                 </article>
                 <article class="product-card">
                     <img src="imagens/bolsa.png" alt="Bolsa preta">
@@ -212,7 +212,7 @@
                     <p class="price">R$35,99</p>
                     <p class="Descrição">ou em 2x R$18,00</p>
                     <button class="favorite" onclick="toggleFavorite(this, 19)"><img src="imagens/coraçao de fav2.png"></button>
-                    <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+                    <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
                 </article>
                 <article class="product-card">
                     <img src="imagens/aneis.png" alt="Anel de prata">
@@ -220,7 +220,7 @@
                     <p class="price">R$15,99</p>
                     <p class="Descrição">à vista</p>
                     <button class="favorite" onclick="toggleFavorite(this, 20)"><img src="imagens/coraçao de fav2.png"></button>
-                    <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+                    <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
                 </article>
                 <article class="product-card">
                     <img src="imagens/oculos.png" alt="Óculos de sol">
@@ -228,7 +228,7 @@
                     <p class="price">R$22,99</p>
                     <p class="Descrição">à vista</p>
                     <button class="favorite" onclick="toggleFavorite(this, 21)"><img src="imagens/coraçao de fav2.png"></button>
-                    <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+                    <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
                 </article>
             </section>
         </section>
@@ -349,5 +349,11 @@
     <script src="/js/favoritos-global.js"></script>
     <script src="/js/menu-auth.js"></script>
     <script src="/js/filtros-categorias.js"></script>
+    <script>
+        function goBack() {
+            window.history.back();
+        }
+    </script>
+    <script src="/js/sacola-global.js"></script>
 </body>
 </html>
