--- a/app/views/pages/homeadm.ejs
+++ b/app/views/pages/homeadm.ejs
@@ -204,7 +204,7 @@
           <p class="Descrição">ou em 2x de R$25,00</p>
 
           <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-          <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+          <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
           
         </article>
 
@@ -214,7 +214,7 @@
           <p class="price">R$39,99</p>
           <p class="Descrição">ou em 2x de R$20,00</p>
           <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-          <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+          <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
         </article>
 
         <article class="product-card">
@@ -224,7 +224,7 @@
           <p class="price">R$29,99</p>
           <p class="Descrição">ou em 2x de R$15,00</p>
           <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-          <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+          <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
         </article>
 
         <article class="product-card">
@@ -233,7 +233,7 @@
           <p class="price">R$19,99</p>
           <p class="Descrição">ou em 2x de R$10,00</p>
           <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-          <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+          <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
         </article>
 
         <a href="/" class="oculto-desktop"><span class="ver">Ver tudo</span></a>
@@ -250,7 +250,7 @@
             <p class="Descrição">ou em 2x de R$25,00</p>
             <br>
             <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-            <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+            <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
           </article>
 
           <article class="product-card">
@@ -259,7 +259,7 @@
             <p class="price">R$39,99</p>
             <p class="Descrição">ou em 2x de R$20,00</p>
             <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-            <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+            <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
           </article>
 
           <article class="product-card">
@@ -268,7 +268,7 @@
             <p class="price">R$29,99</p>
             <p class="Descrição">ou em 2x de R$15,00</p>
             <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-            <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+            <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
           </article>
 
           <article class="product-card">
@@ -277,7 +277,7 @@
             <p class="price">R$19,99</p>
             <p class="Descrição">ou em 2x de R$10,00</p>
             <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-            <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+            <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
           </article>
 
           <a href="/"><span class="ver">Ver tudo</span></a>
@@ -380,7 +380,7 @@
               <br>
               <p class="price">R$12,00</p>
               <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-              <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+              <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
             </article>
 
             <article class="product-card">
@@ -388,7 +388,7 @@
               <h2>Colares de prata</h2>
               <p class="price">R$29,99 <br>ou em 2x R$15,00</p>
               <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-              <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+              <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
             </article>
 
             <article class="product-card">
@@ -396,7 +396,7 @@
               <h2>Bolsa preta </h2>
               <p class="price">R$20,00 <br>ou em 2x R$10,00</p>
               <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-              <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+              <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
             </article>
 
             <article class="product-card">
@@ -405,7 +405,7 @@
               <br>
               <p class="price">R$15,00</p>
               <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-              <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+              <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
             </article>
           </section>
 
@@ -416,7 +416,7 @@
               <h2>Bracelete</h2>
               <p class="price">R$19,99 <br>ou em 2x R$10,00</p>
               <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-              <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+              <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
             </article>
 
             <article class="product-card">
@@ -424,7 +424,7 @@
               <h2>Relógio Rose Gold</h2>
               <p class="price">R$29,99 <br>ou em 2x R$15,00</p>
               <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-              <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+              <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
             </article>
 
             <article class="product-card">
@@ -432,7 +432,7 @@
               <h2>Bolsa Brilhante</h2>
               <p class="price">R$29,99 <br>ou em 2x R$15,00</p>
               <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-              <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+              <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
             </article>
 
             <article class="product-card">
@@ -440,7 +440,7 @@
               <h2>Bracelete Duplo</h2>
               <p class="price">R$28,90 <br>ou em 2x R$14,45</p>
               <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-              <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+              <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
             </article>
           </section>
         </section>
@@ -545,6 +545,7 @@
     </script>
     <script src="/js/navegacao.js"></script>
     <script src="/js/navegacao.js"></script>
+    <script src="/js/sacola-global.js"></script>
 </body>
 
 </html>
