--- a/app/views/pages/homecomprador.ejs
+++ b/app/views/pages/homecomprador.ejs
@@ -5,7 +5,7 @@
 <head>
   <title>Vintélo</title>
   <link rel="stylesheet" href="/css/estilo.css">
-  <link rel="stylesheet" href="/css/estilo2.css">
+
   <link rel="stylesheet" href="/css/profile-sections.css">
   <link rel="icon" href="/imagens/brilhoescuro.png" type="image/x-icon">
 </head>
@@ -65,7 +65,7 @@
             <li>
               <a href="/criarbrecho">
                 <section class="profile-section">
-                  <img src="<%= autenticado && autenticado.imagem ? '/' + autenticado.imagem : '/imagens/icone sem cadastro.png' %>" alt="Perfil" class="profile-pic">
+                  <img src="<%= autenticado && autenticado.imagem ? '/' + autenticado.imagem : '/imagens/icone sem cadastro.png' % alt="Perfil" class="profile-pic maria">" alt="Perfil" class="profile-pic">
                   <section class="profile-info">
                     <h2><%= autenticado && autenticado.nome ? autenticado.nome : 'Usuário' %></h2>
                   </section>
@@ -109,7 +109,7 @@
         <img src="/imagens/logo.png" class="logo">
         <a href="/menu">
           <div class="profile-container">
-            <img src="<%= autenticado && autenticado.imagem ? '/' + autenticado.imagem : '/imagens/icone sem cadastro.png' %>" alt="Foto de perfil" class="profile-pic" />
+            <img src="<%= autenticado && autenticado.imagem ? '/' + autenticado.imagem : '/imagens/icone sem cadastro.png' % alt="Foto de perfil" class="profile-pic maria" />" alt="Foto de perfil" class="profile-pic" />
           </div>
         </a>
       </nav>
@@ -233,7 +233,7 @@
             <p class="price">R$49,99</p>
             <p class="Descrição">ou em 2x de R$25,00</p>
             <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-            <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+            <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
           </article>
           
           <article class="product-card">
@@ -242,7 +242,7 @@
             <p class="price">R$39,99</p>
             <p class="Descrição">ou em 2x de R$20,00</p>
             <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-            <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+            <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
           </article>
           
           <article class="product-card">
@@ -251,7 +251,7 @@
             <p class="price">R$29,99</p>
             <p class="Descrição">ou em 2x de R$15,00</p>
             <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-            <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+            <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
           </article>
           
           <article class="product-card">
@@ -260,7 +260,7 @@
             <p class="price">R$19,99</p>
             <p class="Descrição">ou em 2x de R$10,00</p>
             <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-            <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+            <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
           </article>
         <% } %>
       </section>
@@ -294,7 +294,7 @@
             <p class="price">R$49,99</p>
             <p class="Descrição">ou em 2x de R$25,00</p>
             <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-            <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+            <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
           </article>
           
           <article class="product-card">
@@ -303,7 +303,7 @@
             <p class="price">R$39,99</p>
             <p class="Descrição">ou em 2x de R$20,00</p>
             <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-            <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+            <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
           </article>
           
           <article class="product-card">
@@ -312,7 +312,7 @@
             <p class="price">R$29,99</p>
             <p class="Descrição">ou em 2x de R$15,00</p>
             <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-            <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+            <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
           </article>
           
           <article class="product-card">
@@ -321,7 +321,7 @@
             <p class="price">R$19,99</p>
             <p class="Descrição">ou em 2x de R$10,00</p>
             <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-            <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+            <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
           </article>
         <% } %>
       </section>
@@ -336,7 +336,7 @@
             <p class="Descrição">ou em 2x de R$25,00</p>
             <br>
             <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-            <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+            <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
           </article>
 
           <article class="product-card">
@@ -345,7 +345,7 @@
             <p class="price">R$39,99</p>
             <p class="Descrição">ou em 2x de R$20,00</p>
             <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-            <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+            <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
           </article>
 
           <article class="product-card">
@@ -354,7 +354,7 @@
             <p class="price">R$29,99</p>
             <p class="Descrição">ou em 2x de R$15,00</p>
             <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-            <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+            <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
           </article>
 
           <article class="product-card">
@@ -363,7 +363,7 @@
             <p class="price">R$19,99</p>
             <p class="Descrição">ou em 2x de R$10,00</p>
             <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-            <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+            <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
           </article>
         </section>
       </section>
@@ -463,7 +463,7 @@
               <br>
               <p class="price">R$12,00</p>
               <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-              <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+              <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
             </article>
 
             <article class="product-card">
@@ -471,7 +471,7 @@
               <h2>Colares de prata</h2>
               <p class="price">R$29,99 <br>ou em 2x R$15,00</p>
               <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-              <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+              <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
             </article>
 
             <article class="product-card">
@@ -479,7 +479,7 @@
               <h2>Bolsa preta </h2>
               <p class="price">R$20,00 <br>ou em 2x R$10,00</p>
               <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-              <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+              <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
             </article>
 
             <article class="product-card">
@@ -488,18 +488,15 @@
               <br>
               <p class="price">R$15,00</p>
               <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-              <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+              <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
             </article>
-          </section>
 
-          
-          <section class="product-grid">
             <article class="product-card">
               <img src="imagens/pulseira.png" alt="Bracelete">
               <h2>Bracelete</h2>
               <p class="price">R$19,99 <br>ou em 2x R$10,00</p>
               <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-              <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+              <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
             </article>
 
             <article class="product-card">
@@ -507,7 +504,7 @@
               <h2>Relógio Rose Gold</h2>
               <p class="price">R$29,99 <br>ou em 2x R$15,00</p>
               <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-              <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+              <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
             </article>
 
             <article class="product-card">
@@ -515,7 +512,7 @@
               <h2>Bolsa Brilhante</h2>
               <p class="price">R$29,99 <br>ou em 2x R$15,00</p>
               <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-              <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+              <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
             </article>
 
             <article class="product-card">
@@ -523,7 +520,7 @@
               <h2>Bracelete Duplo</h2>
               <p class="price">R$28,90 <br>ou em 2x R$14,45</p>
               <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-              <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+              <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
             </article>
           </section>
         </section>
@@ -627,6 +624,7 @@
 <script src="js/seguir-brechos.js"></script>
 <script src="script/dinamicahome.js"></script>
 <script src="js/homecomprador.js"></script>
+    <script src="/js/sacola-global.js"></script>
 </body>
 
 </html>
