--- a/app/views/pages/index.ejs
+++ b/app/views/pages/index.ejs
@@ -207,7 +207,7 @@
           <p class="price">R$ 49,99</p>
           <p class="Descrição">ou em 2x de R$ 25,00</p>
           <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-          <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+          <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
         </article>
 
         <article class="product-card">
@@ -216,7 +216,7 @@
           <p class="price">R$39,99</p>
           <p class="Descrição">ou em 2x de R$20,00</p>
           <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-          <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+          <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
         </article>
 
         <article class="product-card">
@@ -226,7 +226,7 @@
           <p class="price">R$29,99</p>
           <p class="Descrição">ou em 2x de R$15,00</p>
           <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-          <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+          <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
         </article>
 
         <article class="product-card">
@@ -235,7 +235,7 @@
           <p class="price">R$19,99</p>
           <p class="Descrição">ou em 2x de R$10,00</p>
           <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-          <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+          <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
         </article>
 
         <a href="/categorias" class="oculto-desktop"><span class="ver">Ver tudo</span></a>
@@ -252,7 +252,7 @@
             <p class="Descrição">ou em 2x de R$25,00</p>
             <br>
             <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-            <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+            <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
           </article>
 
           <article class="product-card">
@@ -261,7 +261,7 @@
             <p class="price">R$39,99</p>
             <p class="Descrição">ou em 2x de R$20,00</p>
             <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-            <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+            <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
           </article>
 
           <article class="product-card">
@@ -270,7 +270,7 @@
             <p class="price">R$29,99</p>
             <p class="Descrição">ou em 2x de R$15,00</p>
             <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-            <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+            <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
           </article>
 
           <article class="product-card">
@@ -279,7 +279,7 @@
             <p class="price">R$19,99</p>
             <p class="Descrição">ou em 2x de R$10,00</p>
             <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-            <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+            <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
           </article>
 
           <a href="/categorias"><span class="ver">Ver tudo</span></a>
@@ -382,7 +382,7 @@
               <br>
               <p class="price">R$12,00</p>
               <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-              <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+              <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
             </article>
 
             <article class="product-card">
@@ -390,7 +390,7 @@
               <h2>Colares de prata</h2>
               <p class="price">R$29,99 <br>ou em 2x R$15,00</p>
               <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-              <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+              <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
             </article>
 
             <article class="product-card">
@@ -398,7 +398,7 @@
               <h2>Bolsa preta </h2>
               <p class="price">R$20,00 <br>ou em 2x R$10,00</p>
               <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-              <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+              <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
             </article>
 
             <article class="product-card">
@@ -407,7 +407,7 @@
               <br>
               <p class="price">R$15,00</p>
               <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-              <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+              <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
             </article>
           </section>
 
@@ -418,7 +418,7 @@
               <h2>Bracelete</h2>
               <p class="price">R$19,99 <br>ou em 2x R$10,00</p>
               <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-              <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+              <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
             </article>
 
             <article class="product-card">
@@ -426,7 +426,7 @@
               <h2>Relógio Rose Gold</h2>
               <p class="price">R$29,99 <br>ou em 2x R$15,00</p>
               <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-              <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+              <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
             </article>
 
             <article class="product-card">
@@ -434,7 +434,7 @@
               <h2>Bolsa Brilhante</h2>
               <p class="price">R$29,99 <br>ou em 2x R$15,00</p>
               <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-              <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+              <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
             </article>
 
             <article class="product-card">
@@ -442,7 +442,7 @@
               <h2>Bracelete Duplo</h2>
               <p class="price">R$28,90 <br>ou em 2x R$14,45</p>
               <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-              <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+              <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
             </article>
           </section>
         </section>
@@ -544,5 +544,6 @@
     <script src="/js/navegacao.js"></script>
     <script src="js/seguir-brechos.js"></script>
     <script src="js/index.js"></script>
+    <script src="/js/sacola-global.js"></script>
 </body>
 </html>
