--- a/app/views/pages/minhascompras.ejs
+++ b/app/views/pages/minhascompras.ejs
@@ -189,6 +189,11 @@
     <script src="/js/navegacao.js"></script>
     <script src="script/minhascompras.js"></script>
     <script src="/js/busca-global.js"></script>
-    </body>
+        <script>
+        function goBack() {
+            window.history.back();
+        }
+    </script>
+</body>
     </html>
     
