--- a/app/views/pages/perfil1.ejs
+++ b/app/views/pages/perfil1.ejs
@@ -163,7 +163,7 @@
                 <p class="price">R$29,99</p>
                 <p class="Descrição">ou em 2x de R$15,00</p>
                 <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-                <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+                <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
             </article>
             <article class="product-card" data-category="blusas">
                 <img src="imagens/cropped rosa.png" alt="Cropped Manga Longa De Lã Rosa">
@@ -171,7 +171,7 @@
                 <p class="price">R$29,99</p>
                 <p class="Descrição">ou em 2x de R$15,00</p>
                 <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-                <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+                <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
             </article>
             <article class="product-card" data-category="vestidos">
                 <img src="imagens/vestido preto.png" alt="Vestido Tubinho Preto">
@@ -179,7 +179,7 @@
                 <p class="price">R$30,00</p>
                 <p class="Descrição">ou em 2x de R$15,00</p>
                 <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-                <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+                <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
             </article>
             <article class="product-card" data-category="blusas">
                 <img src="imagens/cropped cinza.png" alt="Blusa De Manga Longa Cinza">
@@ -187,7 +187,7 @@
                 <p class="price">R$35,00</p>
                 <p class="Descrição">ou em 2x de R$17,50</p>
                 <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-                <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+                <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
             </article>
             <article class="product-card" data-category="calcados">
                 <img src="imagens/tennis.png" alt="Tênis Vert Branco">
@@ -195,7 +195,7 @@
                 <p class="price">R$29,99</p>
                 <p class="Descrição">ou em 2x de R$15,00</p>
                 <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-                <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+                <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
             </article>
             <article class="product-card" data-category="blusas">
                 <img src="imagens/branca regata.png" alt="Blusa Branca">
@@ -203,7 +203,7 @@
                 <p class="price">R$29,99</p>
                 <p class="Descrição">ou em 2x de R$15,00</p>
                 <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-                <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+                <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
             </article>
             <article class="product-card" data-category="saias">
                 <img src="imagens/cropped flor.png" alt="Saia Jeans">
@@ -211,7 +211,7 @@
                 <p class="price">R$45,00</p>
                 <p class="Descrição">ou em 3x de R$15,00</p>
                 <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-                <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+                <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
             </article>
             <article class="product-card" data-category="calcas">
                 <img src="imagens/cropped cinza.png" alt="Calça Preta">
@@ -219,7 +219,7 @@
                 <p class="price">R$55,00</p>
                 <p class="Descrição">ou em 4x de R$13,75</p>
                 <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-                <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+                <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
             </article>
             <article class="product-card" data-category="acessorios">
                 <img src="imagens/tennis.png" alt="Bolsa Marrom">
@@ -227,7 +227,7 @@
                 <p class="price">R$80,00</p>
                 <p class="Descrição">ou em 5x de R$16,00</p>
                 <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-                <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+                <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
             </article>
             <article class="product-card" data-category="vestidos">
                 <img src="imagens/vestido preto.png" alt="Vestido Floral">
@@ -235,7 +235,7 @@
                 <p class="price">R$65,00</p>
                 <p class="Descrição">ou em 4x de R$16,25</p>
                 <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-                <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+                <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
             </article>
             <article class="product-card" data-category="casacos">
                 <img src="imagens/cropped rosa.png" alt="Jaqueta Jeans">
@@ -243,7 +243,7 @@
                 <p class="price">R$75,00</p>
                 <p class="Descrição">ou em 5x de R$15,00</p>
                 <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-                <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+                <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
             </article>
         </section>
 
@@ -278,5 +278,11 @@
     </script>
     <script src="/js/navegacao.js"></script>
     <script src="/js/navegacao.js"></script>
+    <script>
+        function goBack() {
+            window.history.back();
+        }
+    </script>
+    <script src="/js/sacola-global.js"></script>
 </body>
 </html>
