--- a/app/views/pages/perfil2.ejs
+++ b/app/views/pages/perfil2.ejs
@@ -162,7 +162,7 @@
                 <p class="price">R$29,99</p>
                 <p class="Descrição">ou em 2x de R$15,00</p>
                 <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-                <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+                <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
             </article>
             <article class="product-card" data-category="blusas">
                 <img src="imagens/cropped rosa.png" alt="Cropped Manga Longa De Lã Rosa">
@@ -170,7 +170,7 @@
                 <p class="price">R$29,99</p>
                 <p class="Descrição">ou em 2x de R$15,00</p>
                 <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-                <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+                <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
             </article>
             <article class="product-card" data-category="vestidos">
                 <img src="imagens/vestido preto.png" alt="Vestido Tubinho Preto">
@@ -178,7 +178,7 @@
                 <p class="price">R$30,00</p>
                 <p class="Descrição">ou em 2x de R$15,00</p>
                 <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-                <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+                <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
             </article>
             <article class="product-card" data-category="blusas">
                 <img src="imagens/cropped cinza.png" alt="Blusa De Manga Longa Cinza">
@@ -186,7 +186,7 @@
                 <p class="price">R$35,00</p>
                 <p class="Descrição">ou em 2x de R$17,50</p>
                 <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-                <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+                <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
             </article>
             <article class="product-card" data-category="calcados">
                 <img src="imagens/tennis.png" alt="Tênis Vert Branco">
@@ -194,7 +194,7 @@
                 <p class="price">R$29,99</p>
                 <p class="Descrição">ou em 2x de R$15,00</p>
                 <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-                <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+                <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
             </article>
             <article class="product-card" data-category="blusas">
                 <img src="imagens/branca regata.png" alt="Blusa Branca">
@@ -202,7 +202,7 @@
                 <p class="price">R$29,99</p>
                 <p class="Descrição">ou em 2x de R$15,00</p>
                 <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-                <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+                <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
             </article>
         </section>
 
@@ -304,5 +304,11 @@
     </script>
     <script src="/js/navegacao.js"></script>
     <script src="/js/navegacao.js"></script>
+    <script>
+        function goBack() {
+            window.history.back();
+        }
+    </script>
+    <script src="/js/sacola-global.js"></script>
 </body>
 </html>
