--- a/app/views/pages/perfilbrecho.ejs
+++ b/app/views/pages/perfilbrecho.ejs
@@ -235,5 +235,11 @@
         });
     </script>
     <% } %>
+    <script>
+        function goBack() {
+            window.history.back();
+        }
+    </script>
+    <script src="/js/sacola-global.js"></script>
 </body>
 </html>
