--- a/app/views/pages/perfilvendedor.ejs
+++ b/app/views/pages/perfilvendedor.ejs
@@ -30,7 +30,7 @@
                 </form>
                 <ul>
                     <li><a href="/sacola1"><img src="imagens/icone saco.png" class="img-tamanho" alt="Sacola"></a></li>
-                    <li><a href="/menuvendedor"><img src="<%= autenticado && autenticado.imagem ? autenticado.imagem : '/imagens/icone sem cadastro.png' %>" class="maria" alt="Perfil"></a></li>
+                    <li><a href="/menuvendedor"><img src="<%= autenticado && autenticado.imagem ? autenticado.imagem : '/imagens/icone sem cadastro.png' % class="maria" alt="Perfil">" class="maria" alt="Perfil"></a></li>
                     <li><a href="/favoritos"><img src="imagens/icone coraçao.png" class="img-tamanho" alt="Favoritos"></a></li>
                 </ul>
             </section>
@@ -46,7 +46,7 @@
                 </a>
                 <img src="imagens/logo.png" alt="Vintélo">
                 <a href="/menuvendedor">
-                    <img src="<%= autenticado && autenticado.imagem ? autenticado.imagem : '/imagens/icone sem cadastro.png' %>" class="maria" alt="Menu">
+                    <img src="<%= autenticado && autenticado.imagem ? autenticado.imagem : '/imagens/icone sem cadastro.png' % class="maria" alt="Menu">" class="maria" alt="Menu">
                 </a>
             </nav>
         </header>
@@ -61,7 +61,7 @@
                 <aside class="profile-sidebar">
                     <section class="profile-info">
                         <section class="photo-upload-container">
-                            <img src="<%= autenticado && autenticado.imagem ? autenticado.imagem : '/imagens/icone sem cadastro.png' %>" alt="Logo do brechó" class="profile-image" id="profileImage">
+                            <img src="<%= autenticado && autenticado.imagem ? autenticado.imagem : '/imagens/icone sem cadastro.png' % alt="Logo do brechó" class="profile-image maria" id="profileImage">" alt="Logo do brechó" class="profile-image" id="profileImage">
                             <section class="photo-upload-overlay">
                                 <input type="file" id="photoInput" accept="image/*" style="display: none;">
                                 <button type="button" class="photo-upload-btn" onclick="document.getElementById('photoInput').click()">
