--- a/app/views/pages/produto1.ejs
+++ b/app/views/pages/produto1.ejs
@@ -154,7 +154,7 @@
                     <br>
                     <p class="price">R$12,00</p>
                     <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-                    <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+                    <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
                 </article>
         
                 <article class="product-card">
@@ -162,7 +162,7 @@
                     <h2>Conjunto 3 cores de prata</h2>
                     <p class="price">R$29,99 <br>ou em 2x R$15,00</p>
                     <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-                    <button class="cart"><img src="imagens/sacola.png"class="img-sacola"></button>
+                    <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png"class="img-sacola"></button>
                 </article>
         
                 <article class="product-card">
@@ -170,7 +170,7 @@
                     <h2>Bolsa preta com alça dourada</h2>
                     <p class="price">R$20,00 <br>ou em 2x R$10,00</p>
                     <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-                    <button class="cart"><img src="imagens/sacola.png"class="img-sacola"></button>
+                    <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png"class="img-sacola"></button>
                 </article>
         
                 <article class="product-card">
@@ -179,7 +179,7 @@
                     <br>
                     <p class="price">R$15,00</p>
                     <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-                    <button class="cart"><img src="imagens/sacola.png"class="img-sacola"></button>
+                    <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png"class="img-sacola"></button>
                 </article>
               </section>
 
@@ -189,7 +189,7 @@
                     <h2>Bracelete</h2>
                     <p class="price">R$19,99 <br>ou em 2x R$10,00</p>
                     <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-                    <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+                    <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
                 </article>
         
                 <article class="product-card">
@@ -197,7 +197,7 @@
                     <h2>Relógio Rose Gold</h2>
                     <p class="price">R$29,99 <br>ou em 2x R$15,00</p>
                     <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-                    <button class="cart"><img src="imagens/sacola.png"class="img-sacola"></button>
+                    <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png"class="img-sacola"></button>
                 </article>
         
                 <article class="product-card">
@@ -205,7 +205,7 @@
                     <h2>Bolsa Brilhante</h2>
                     <p class="price">R$29,99 <br>ou em 2x R$15,00</p>
                     <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-                    <button class="cart"><img src="imagens/sacola.png"class="img-sacola"></button>
+                    <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png"class="img-sacola"></button>
                 </article>
         
                 <article class="product-card">
@@ -213,7 +213,7 @@
                     <h2>Bracelete Duplo</h2>
                     <p class="price">R$28,90 <br>ou em 2x R$14,45</p>
                     <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-                    <button class="cart"><img src="imagens/sacola.png"class="img-sacola"></button>
+                    <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png"class="img-sacola"></button>
                 </article>
 
                 <article class="product-card">
@@ -221,7 +221,7 @@
                       <h2>Vestido Marrom Com Decote</h2>
                       <p class="price">R$49,99</p>
                       <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-                      <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+                      <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
                   </article>
           
                   <article class="product-card">
@@ -229,7 +229,7 @@
                       <h2>Vestido Longo Com Botoes</h2>
                       <p class="price">R$39,99</p>
                       <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-                      <button class="cart"><img src="imagens/sacola.png"class="img-sacola"></button>
+                      <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png"class="img-sacola"></button>
                   </article>
           
                   <article class="product-card">
@@ -237,7 +237,7 @@
                       <h2>Saia Cargo Jeans</h2>
                       <p class="price">R$29,99</p>
                       <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-                      <button class="cart"><img src="imagens/sacola.png"class="img-sacola"></button>
+                      <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png"class="img-sacola"></button>
                   </article>
           
                   <article class="product-card">
@@ -245,7 +245,7 @@
                       <h2>Saia Longa Jeans</h2>
                       <p class="price">R$19,99</p>
                       <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
-                      <button class="cart"><img src="imagens/sacola.png"class="img-sacola"></button>
+                      <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png"class="img-sacola"></button>
                   </article>
             </section>
           </section>
@@ -279,5 +279,11 @@
     <script src="/js/navegacao.js"></script>
     <script src="/js/navegacao.js"></script>
     <script src="/js/favoritos-global.js"></script>
+    <script>
+        function goBack() {
+            window.history.back();
+        }
+    </script>
+    <script src="/js/sacola-global.js"></script>
 </body>
 </html>
