--- a/app/views/pages/produto2.ejs
+++ b/app/views/pages/produto2.ejs
@@ -196,7 +196,7 @@
                     <br>
                     <p class="price">R$12,00</p>
                     <button class="favorite" onclick="toggleFavorite(this, 'oculos-sol')"><img src="imagens/coraçao de fav2.png"></button>
-                    <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+                    <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
                 </article>
         
                 <article class="product-card">
@@ -204,7 +204,7 @@
                     <h2>Conjunto 3 cores de prata</h2>
                     <p class="price">R$29,99 <br>ou em 2x R$15,00</p>
                     <button class="favorite" onclick="toggleFavorite(this, 'colar-prata')"><img src="imagens/coraçao de fav2.png"></button>
-                    <button class="cart"><img src="imagens/sacola.png"class="img-sacola"></button>
+                    <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png"class="img-sacola"></button>
                 </article>
         
                 <article class="product-card">
@@ -212,7 +212,7 @@
                     <h2>Bolsa preta com alça dourada</h2>
                     <p class="price">R$20,00 <br>ou em 2x R$10,00</p>
                     <button class="favorite" onclick="toggleFavorite(this, 'bolsa-preta')"><img src="imagens/coraçao de fav2.png"></button>
-                    <button class="cart"><img src="imagens/sacola.png"class="img-sacola"></button>
+                    <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png"class="img-sacola"></button>
                 </article>
         
                 <article class="product-card">
@@ -221,7 +221,7 @@
                     <br>
                     <p class="price">R$15,00</p>
                     <button class="favorite" onclick="toggleFavorite(this, 'anel-prata')"><img src="imagens/coraçao de fav2.png"></button>
-                    <button class="cart"><img src="imagens/imagens/sacola.png"class="img-sacola"></button>
+                    <button class="cart" onclick="addToCart(1)"><img src="imagens/imagens/sacola.png"class="img-sacola"></button>
                 </article>
               </section>
 
@@ -231,7 +231,7 @@
                     <h2>Bracelete</h2>
                     <p class="price">R$19,99 <br>ou em 2x R$10,00</p>
                     <button class="favorite" onclick="toggleFavorite(this, 'bracelete')"><img src="imagens/coraçao de fav2.png"></button>
-                    <button class="cart"><img src="imagens/imagens/sacola.png" class="img-sacola"></button>
+                    <button class="cart" onclick="addToCart(1)"><img src="imagens/imagens/sacola.png" class="img-sacola"></button>
                 </article>
         
                 <article class="product-card">
@@ -239,7 +239,7 @@
                     <h2>Relógio Rose Gold</h2>
                     <p class="price">R$29,99 <br>ou em 2x R$15,00</p>
                     <button class="favorite" onclick="toggleFavorite(this, 'relogio-rose')"><img src="imagens/coraçao de fav2.png"></button>
-                    <button class="cart"><img src="imagens/sacola.png"class="img-sacola"></button>
+                    <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png"class="img-sacola"></button>
                 </article>
         
                 <article class="product-card">
@@ -247,7 +247,7 @@
                     <h2>Bolsa Brilhante</h2>
                     <p class="price">R$29,99 <br>ou em 2x R$15,00</p>
                     <button class="favorite" onclick="toggleFavorite(this, 'bolsa-brilhante')"><img src="imagens/coraçao de fav2.png"></button>
-                    <button class="cart"><img src="imagens/sacola.png"class="img-sacola"></button>
+                    <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png"class="img-sacola"></button>
                 </article>
         
                 <article class="product-card">
@@ -255,7 +255,7 @@
                     <h2>Bracelete Duplo</h2>
                     <p class="price">R$28,90 <br>ou em 2x R$14,45</p>
                     <button class="favorite" onclick="toggleFavorite(this, 'bracelete-duplo')"><img src="imagens/coraçao de fav2.png"></button>
-                    <button class="cart"><img src="imagens/sacola.png"class="img-sacola"></button>
+                    <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png"class="img-sacola"></button>
                 </article>
 
                 <article class="product-card">
@@ -263,7 +263,7 @@
                       <h2>Vestido Marrom Com Decote</h2>
                       <p class="price">R$49,99</p>
                       <button class="favorite" onclick="toggleFavorite(this, 'vestido-marrom')"><img src="imagens/coraçao de fav2.png"></button>
-                      <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+                      <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png" class="img-sacola"></button>
                   </article>
           
                   <article class="product-card">
@@ -271,7 +271,7 @@
                       <h2>Vestido Longo Com Botoes</h2>
                       <p class="price">R$39,99</p>
                       <button class="favorite" onclick="toggleFavorite(this, 'vestido-botoes')"><img src="imagens/coraçao de fav2.png"></button>
-                      <button class="cart"><img src="imagens/sacola.png"class="img-sacola"></button>
+                      <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png"class="img-sacola"></button>
                   </article>
           
                   <article class="product-card">
@@ -279,7 +279,7 @@
                       <h2>Saia Cargo Jeans</h2>
                       <p class="price">R$29,99</p>
                       <button class="favorite" onclick="toggleFavorite(this, 'saia-cargo')"><img src="imagens/coraçao de fav2.png"></button>
-                      <button class="cart"><img src="imagens/sacola.png"class="img-sacola"></button>
+                      <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png"class="img-sacola"></button>
                   </article>
           
                   <article class="product-card">
@@ -287,7 +287,7 @@
                       <h2>Saia Longa Jeans</h2>
                       <p class="price">R$19,99</p>
                       <button class="favorite" onclick="toggleFavorite(this, 'saia-longa')"><img src="imagens/coraçao de fav2.png"></button>
-                      <button class="cart"><img src="imagens/sacola.png"class="img-sacola"></button>
+                      <button class="cart" onclick="addToCart(1)"><img src="imagens/sacola.png"class="img-sacola"></button>
                   </article>
             </section>
           </section>
@@ -352,5 +352,11 @@
             });
         }
     </script>
+    <script>
+        function goBack() {
+            window.history.back();
+        }
+    </script>
+    <script src="/js/sacola-global.js"></script>
 </body>
 </html>
