--- a/app/views/pages/sacola1.ejs
+++ b/app/views/pages/sacola1.ejs
@@ -202,5 +202,11 @@
     <script src="/js/navegacao.js"></script>
     <script src="/js/carrinho-global.js"></script>
     <script src="/js/busca-global.js"></script>
+    <script>
+        function goBack() {
+            window.history.back();
+        }
+    </script>
+    <script src="/js/favoritos-global.js"></script>
 </body>
 </html>
