--- a/app/public/css/categorias.css
+++ b/app/public/css/categorias.css
@@ -393,6 +393,7 @@ h3 {
         border-radius: 15px;
         flex-shrink: 0;
         box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+        margin-left: 40px;
     }
 }
 
