--- a/app/views/pages/blogadm.ejs
+++ b/app/views/pages/blogadm.ejs
@@ -410,5 +410,10 @@
     </script>
     <script src="/js/navegacao.js"></script>
     <script src="/js/navegacao.js"></script>
+    <script>
+        function goBack() {
+            window.history.back();
+        }
+    </script>
 </body>
 </html>
