--- a/app/views/pages/brechoadm.ejs
+++ b/app/views/pages/brechoadm.ejs
@@ -223,5 +223,10 @@
     </script>
     <script src="/js/navegacao.js"></script>
     <script src="/js/navegacao.js"></script>
+    <script>
+        function goBack() {
+            window.history.back();
+        }
+    </script>
 </body>
 </html>
