--- a/app/views/pages/criarbrecho.ejs
+++ b/app/views/pages/criarbrecho.ejs
@@ -187,5 +187,10 @@
     </script>
     <script src="/js/navegacao.js"></script>
     <script src="/js/navegacao.js"></script>
+    <script>
+        function goBack() {
+            window.history.back();
+        }
+    </script>
 </body>
 </html>
