--- a/app/views/pages/enviopedido.ejs
+++ b/app/views/pages/enviopedido.ejs
@@ -108,5 +108,10 @@
     </script>
     <script src="/js/navegacao.js"></script>
     <script src="/js/navegacao.js"></script>
+    <script>
+        function goBack() {
+            window.history.back();
+        }
+    </script>
 </body>
 </html>
