--- a/app/views/pages/finalizandocompra1.ejs
+++ b/app/views/pages/finalizandocompra1.ejs
@@ -256,5 +256,10 @@
     </script>
     <script src="/js/navegacao.js"></script>
     <script src="/js/navegacao.js"></script>
+    <script>
+        function goBack() {
+            window.history.back();
+        }
+    </script>
 </body>
 </html>
