--- a/app/views/pages/finalizandocompra2.ejs
+++ b/app/views/pages/finalizandocompra2.ejs
@@ -790,5 +790,10 @@ function closeNotification() {
     </script>
     <script src="/js/navegacao.js"></script>
     <script src="/js/navegacao.js"></script>
+    <script>
+        function goBack() {
+            window.history.back();
+        }
+    </script>
 </body>
 </html>
