--- a/app/views/pages/finalizandopagamento.ejs
+++ b/app/views/pages/finalizandopagamento.ejs
@@ -149,5 +149,10 @@
     </script>
     <script src="/js/navegacao.js"></script>
     <script src="/js/navegacao.js"></script>
+    <script>
+        function goBack() {
+            window.history.back();
+        }
+    </script>
 </body>
 </html>
