--- a/app/views/pages/pedidos.ejs
+++ b/app/views/pages/pedidos.ejs
@@ -291,5 +291,10 @@
     </script>
     <script src="/js/navegacao.js"></script>
     <script src="/js/navegacao.js"></script>
+    <script>
+        function goBack() {
+            window.history.back();
+        }
+    </script>
 </body>
 </html>
