--- a/app/views/pages/planos.ejs
+++ b/app/views/pages/planos.ejs
@@ -248,5 +248,10 @@
     <script src="/js/navegacao.js"></script>
     <script src="/js/navegacao.js"></script>
   <script src="/js/planos.js"></script>
+    <script>
+        function goBack() {
+            window.history.back();
+        }
+    </script>
 </body>
 </html>
