--- a/app/views/pages/usuariosadm.ejs
+++ b/app/views/pages/usuariosadm.ejs
@@ -233,5 +233,10 @@
     </script>
     <script src="/js/navegacao.js"></script>
     <script src="/js/navegacao.js"></script>
+    <script>
+        function goBack() {
+            window.history.back();
+        }
+    </script>
 </body>
 </html>
